Transform all GET requests into POST requests
