# src/openapi.yaml
@@ -14,14 +14,17 @@ security:
 
 paths:
   /compute/scoreDistribution:
-    get:
+    post:
       description: Returns a bar chart as PNG image to show the review's score distribution between 2 period of time
-      parameters:
-        - name: date
-          in: query
-          description: Date to compare score distribution (if empty, no comparaison)
-          schema:
-            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                date:
+                    description: Date to compare score distribution (if empty, no comparaison)
+                    type: string
       responses:
         '200':
           description: Returns a bar chart as PNG image
@@ -31,19 +34,20 @@ paths:
                 type: string
                 format: binary
   /compute/means:
-    get:
+    post:
       description: Returns a graphic as PNG image
-      parameters:
-        - name: timeDelta
-          in: query
-          description: Define the duration in days on which it computes cumulative results (default = 30)
-          schema:
-            type: integer
-        - name: ignore
-          in: query
-          description: Indicates the number of first reviews to skip (default = 0)
-          schema:
-            type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                timeDelta:
+                  description: Define the duration in days on which it computes cumulative results (default = 30)
+                  type: integer
+                ignore:
+                  description: Indicates the number of first reviews to skip (default = 0)
+                  type: integer
       responses:
         '200':
           description: Returns a graphic as PNG image
@@ -53,49 +57,41 @@ paths:
                 type: string
                 format: binary
   /wordcloud/computeWords:
-    get:
+    post:
       description: Returns a 2 set of vocabulary and their frequencies 
-      parameters:
-        - name: alpha
-          in: query
-          description: Parameters to reduce noises in data
-          schema:
-            type: integer
-        - name: n
-          in: query
-          description: Define the number of word per token vocabulary (group of consecutive word)
-          schema:
-            type: integer
-        - name: lang
-          in: query
-          description: Language of analysed reviews from the following list ["de","en","es","fr","it","ja","pt","zh"]
-          schema:
-            type: string
-        - name: score
-          in: query
-          description: Filter reviews on score (take all if empty or 0)
-          schema:
-            type: integer
-        - name: start1
-          in: query
-          description: First period start date to compare
-          schema:
-            type: string
-        - name: end1
-          in: query
-          description: First period end date to compare
-          schema:
-            type: string
-        - name: start2
-          in: query
-          description: Second period start date to compare
-          schema:
-            type: string
-        - name: end2
-          in: query
-          description: Second period end date to compare
-          schema:
-            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                alpha:
+                  description: Parameters to reduce noises in data
+                  type: integer
+                n:
+                  description: Define the number of word per token vocabulary (group of consecutive word)
+                  type: integer
+                lang:
+                  description: Language of analysed reviews from the following list ["de","en","es","fr","it","ja","pt","zh"]
+                  type: string
+                score:
+                  description: Filter reviews on score (take all if empty or 0)
+                  type: integer
+                start1:
+                  description: First period start date to compare
+                  type: string
+                end1:
+                  description: First period end date to compare
+                  type: string
+                start2:
+                  description: Second period start date to compare
+                  type: string
+                end2:
+                  description: Second period end date to compare
+                  type: string
+
+
       responses:
         '200':
           description: Returns a JSON object including the 2 set of vocabulary
